trying to fix content spill

--- a/wp-content/themes/repro/style.css
+++ b/wp-content/themes/repro/style.css
@@ -50,7 +50,7 @@ color:#444444;
 #socialIcons{
 height:36px;
 }
-#homeSlider{
+#galleria{
 width:620px;
 height:448px;
 background-color:black;
